--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,12 @@ description = "Specify what you want it to build, the AI asks for clarification,
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
+  'langchain >= 0.0.215',
+  'transformers==4.30.2',
+  'triton==2.0.0',
+  'accelerate==0.20.3',
+  'einops==0.6.1',
+  'xformers==0.0.20',
   'black == 23.3.0',
   'click >= 8.0.0',
   'mypy == 1.3.0',
